Added intro page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ﻿<html>
 <head>
-    <title>Location Functions</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 <body>
     <ul>
+        <a href="intro.php">Introduction</a>
     </ul>
 </body>
 </html>
