--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <ul>
-        <a href="intro.php">Introduction</a>
+        <li><a href="intro.php">Introduction</a></li>
     </ul>
 </body>
 </html>
