Added Email Button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
     <ul>
         <li><a href="intro.html">Introduction</a></li>
+        <li><a href="mailto:testertestington940@gmail.com">Email Me!</a></li>
     </ul>
 </body>
 </html>
