Added icon and titles

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <head>
     <title>My Portfolio</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="icon" href="img/ico.png"/>
 </head>
 <body>
     <ul>
-        <li><a href="intro.html">Introduction</a></li>
+        <li><a href="intro.html">About Me</a></li>
         <li><a href="mailto:testertestington940@gmail.com">Email Me!</a></li>
     </ul>
 </body>
