--- a/intro.html
+++ b/intro.html
@@ -1,6 +1,8 @@
 <html>
 <head>
+    <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="icon" href="img/ico.png"/>
 </head>
 <body>
     <ul>
