Addded projects page and modified return link to simplify users view

--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>About Me</title>
+    <title>My Projects</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
     <link rel="icon" href="img/ico.png"/>
 </head>
@@ -8,7 +8,5 @@
     <ul>
         <li><a href="https://danicus2000000.github.io">Return to selection</a></li>
     </ul>
-    <h3>Hello World!</h3>
-    <p>My name is Dan and I am a programmer I currently have the ability to make use of, and write Python, C#, HTML, CSS, PHP, JavaScript and SQL!</p>
 </body>
 </html>
