--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <ul>
         <li><a href="intro.html">About Me</a></li>
+        <li><a href="projects.html">My Projects</a></li>
         <li><a href="mailto:testertestington940@gmail.com">Email Me!</a></li>
     </ul>
 </body>
