--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 ﻿<html>
 <head>
-    <title>My Portfolio</title>
+    <title id="titlecontainer">About Me</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
     <link rel="icon" href="img/ico.png"/>
 </head>
 <body>
     <ul>
-        <li><a onclick="changeContainer('intro.html')">About Me</a></li>
-        <li><a onclick="changeContainer('projects.html')">My Projects</a></li>
+        <li><a onclick="changeContainer('intro.html','About Me')">About Me</a></li>
+        <li><a onclick="changeContainer('projects.html','My Projects')">My Projects</a></li>
         <li><a href="mailto:testertestington940@gmail.com">Email Me!</a></li>
     </ul>
     <iframe src="intro.html" id="container" allowTransparency="true" scrolling="no" frameborder="0" >
     </iframe>
     <script type="text/javascript">
-        function changeContainer(page)
+        function changeContainer(page,title)
         {
             document.getElementById("container").src=page;
+            document.getElementById("titlecontainer").innerHTML=title;
         }
     </script>
 </body>
