Added first project and neatened up current data

--- a/intro.html
+++ b/intro.html
@@ -1,11 +1,11 @@
 <html>
-<head>
-    <title>About Me</title>
-    <link rel="stylesheet" type="text/css" href="main.css" />
-    <link rel="icon" href="img/ico.png"/>
-</head>
+    <head>
+        <link rel="stylesheet" type="text/css" href="main.css" />
+    </head>
 <body>
-    <h3>Hello World!</h3>
-    <p>My name is Dan and I am a programmer I currently have the ability to make use of, and write Python, C#, HTML, CSS, PHP, JavaScript and SQL!</p>
+    <h3 id="underline">Hello World!</h3>
+    <p>My name is Dan and I am in the process of studying Computer Science (Specifically Software Engineering) at University level.</p>
+    <p>I currently have the ability to make use of, and write Python, C#, HTML, CSS, PHP, JavaScript and SQL!</p>
+    <p>This website was entirely scripted by me and serves as a portfolio of my projects so far!</p>
 </body>
 </html>
