--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,9 @@
 <html>
-<head>
-    <title>My Projects</title>
-    <link rel="stylesheet" type="text/css" href="main.css" />
-    <link rel="icon" href="img/ico.png"/>
-</head>
+    <head>
+        <link rel="stylesheet" type="text/css" href="main.css" />
+    </head>
 <body>
+    <h2><a href="https://github.com/Danicus2000000/Password-checker" target="_blank" id="underline">Password Checker</a></h2>
+    <p>This simple password strength tester allows you to enter a password and see its strength with suggestons on how to improve it</p>
 </body>
 </html>
