--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
             document.getElementById("container").src=page;
             document.getElementById("titlecontainer").innerHTML=title;
         }
+        
+        var content = document.getElementById("container");
+        content.onload = function()
+        {
+          content.style.height = content.contentWindow.document.body.scrollHeight + 'px';
+          content.style.width  = content.contentWindow.document.body.scrollWidth+'px';
+        }
     </script>
 </body>
 </html>
