--- a/projects.html
+++ b/projects.html
@@ -5,5 +5,29 @@
 <body>
     <h2><a href="https://github.com/Danicus2000000/Password-checker" target="_blank" id="underline">Password Checker</a></h2>
     <p>This simple password strength tester allows you to enter a password and see its strength with suggestons on how to improve it</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
+    <p>aaa</p>
 </body>
 </html>
