--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
         
         var content = document.getElementById("container");
-        content.onchange = function()
+        content.onload = function()
         {
           content.style.height = content.contentWindow.document.body.scrollHeight + 'px';
           content.style.width  = content.contentWindow.document.body.scrollWidth+'px';
