Added preview context

--- a/aboutR/index.html
+++ b/aboutR/index.html
@@ -4,7 +4,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://danicus2000000.github.io/aboutR">
     <meta property="og:title" content="All About R">
-    <meta property="og:description" content="An infodump all about the great R">
+    <meta property="og:description" content="An infodump all about the great R.">
     <meta property="og:image" content="https://danicus2000000.github.io/img/ico.png">
 </head>
 <body>
