--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <title id="titlecontainer">About Me</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
     <link rel="icon" href="img/ico.png"/>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://danicus2000000.github.io">
+    <meta property="og:title" content="My Portfolio">
+    <meta property="og:description" content="A website displaying all my personal achievements.">
+    <meta property="og:image" content="https://danicus2000000.github.io/img/ico.png">
 </head>
 <body>
     <ul>
