Modified folder layout for easier viewing

--- a/sil/index.html
+++ b/sil/index.html
@@ -1,12 +1,12 @@
 ﻿<html>
 <head>
     <title id="titlecontainer">About Sil - The Official Sil Fanpage</title>
-    <link rel="stylesheet" type="text/css" href="main.css" />
-    <link rel="icon" href="img/ico.png"/>
+    <link rel="stylesheet" type="text/css" href="../css/sil.css"/>
+    <link rel="icon" href="../img/SilIcon.png"/>
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://danicus2000000.github.io/sil">
     <meta property="og:title" content="The Official Sil Fanpage">
-    <meta property="og:description" content="A page to show off our great lord sil.">
+    <meta property="og:description" content="A page to show off the great sil.">
     <meta property="og:image" content="https://danicus2000000.github.io/sil/img/ico.png">
 </head>
 <body>
