--- a/sil/silaugh.html
+++ b/sil/silaugh.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="main.css" />
+        <link rel="stylesheet" type="text/css" href="../css/sil.css"/>
     </head>
     <body>
         <iframe width="100%" height="100%"src="https://www.youtube.com/embed/itJI4-aXSzc"></iframe>
