--- a/Portfolio/intro.html
+++ b/Portfolio/intro.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="main.css" />
+        <link rel="stylesheet" type="text/css" href="../css/default.css"/>
     </head>
 <body>
     <h3 id="underline">Hello World!</h3>
