--- a/index.html
+++ b/index.html
@@ -1,28 +1,20 @@
 ﻿<html>
 <head>
-    <title id="titlecontainer">About Me</title>
-    <link rel="stylesheet" type="text/css" href="main.css" />
-    <link rel="icon" href="img/ico.png"/>
+    <title id="titlecontainer">Index</title>
+    <link rel="stylesheet" type="text/css" href="css/default.css"/>
+    <link rel="icon" href="img/PCIcon.png"/>
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://danicus2000000.github.io">
-    <meta property="og:title" content="My Portfolio">
-    <meta property="og:description" content="A website displaying all my personal achievements.">
-    <meta property="og:image" content="https://danicus2000000.github.io/img/ico.png">
+    <meta property="og:title" content="Index of danicus2000000.github.io">
+    <meta property="og:description" content="Index of danicus2000000.github.io">
+    <meta property="og:image" content="https://danicus2000000.github.io/img/PCIcon.png">
 </head>
 <body>
     <ul>
-        <li><a onclick="changeContainer('intro.html','About Me')">About Me</a></li>
-        <li><a onclick="changeContainer('projects.html','My Projects')">My Projects</a></li>
-        <li><a href="mailto:testertestington940@gmail.com">Email Me!</a></li>
+        <li><a href="https://danicus2000000.github.io/Portfolio">My Portfolio</a></li>
+        <li><a href="https://danicus2000000.github.io/sil">The Sil Fanpage</a></li>
+        <li><a href="https://danicus2000000.github.io/aboutR">Notes</a></li>
+        <li><a href="https://danicus2000000.github.io/aboutRM">Addendum</a></li>
     </ul>
-    <iframe src="intro.html" id="container" allowTransparency="true" scrolling="no" frameborder="0" >
-    </iframe>
-    <script type="text/javascript">
-        function changeContainer(page,title)
-        {
-            document.getElementById("container").src=page;
-            document.getElementById("titlecontainer").innerHTML=title;
-        }
-    </script>
 </body>
 </html>
