--- a/sil/silloveletter.html
+++ b/sil/silloveletter.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="main.css" />
+        <link rel="stylesheet" type="text/css" href="../css/sil.css"/>
     </head>
 <body>
     <h4 id="loveletter">Dear Sil.</h4>
