--- a/sil/supermovers.html
+++ b/sil/supermovers.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="main.css" />
+        <link rel="stylesheet" type="text/css" href="../css/sil.css"/>
     </head>
 <body>
     <iframe width="100%" height="100%" frameborder="0" src="https://www.bbc.co.uk/programmes/p06skgqr/player"></iframe>
