--- a/404.html
+++ b/404.html
@@ -1,6 +1,8 @@
 <htnml>
     <head>
         <link rel="stylesheet" type="text/css" href="css/default.css"/>
+        <link rel="icon" href="img/PCIcon.png"/>
+        <title>404: You're lost!</title>
     </head>
     <body>
         <center>
