--- a/crimbo/win.html
+++ b/crimbo/win.html
@@ -8,7 +8,7 @@
     <center>
         <h1>Congratulations you win the game you amazing spoon!</h1>
         <img src="../img/christmasTree.gif" alt-text="Happy Christmas!"/>
-        <h3>I hope this game was a good bit of fun and hope it shows that sometimes I can be creative in my own way hehe</h3>
+        <h3>I hope this game was a good bit of fun and an amazing virtual gift!</h3>
     </center>
 </body>
 </html>
