--- a/BLEPages/testPage5.html
+++ b/BLEPages/testPage5.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <title id="titlecontainer">Test Page 5</title>
-    <link rel="stylesheet" type="text/css" href="../css/default.css"/>
-    <link rel="icon" href="../img/PCIcon.png"/>
+    <link rel="stylesheet" type="text/css" href="default.css"/>
+    <link rel="icon" href="PCIcon.png"/>
 </head>
 <body>
 </body>
