Added Test image,audio and video!

--- a/BLEPages/testPage3.html
+++ b/BLEPages/testPage3.html
@@ -30,6 +30,9 @@ Fossils that are carbonized or coalified consist of the organic remains which ha
        
 Bioimmuration<br/>
 Bioimmuration occurs when a skeletal organism overgrows or otherwise subsumes another organism, preserving the latter, or an impression of it, within the skeleton. Usually it is a sessile skeletal organism, such as a bryozoan or an oyster, which grows along a substrate, covering other sessile sclerobionts. Sometimes the bioimmured organism is soft-bodied and is then preserved in negative relief as a kind of external mold. There are also cases where an organism settles on top of a living skeletal organism that grows upwards, preserving the settler in its skeleton. Bioimmuration is known in the fossil record from the Ordovician to the Recent.(Wikipedia,2023)</p3>
+        <video width=1920 height=1080 controls>
+            <source src="../img/testVideo.mp4" type="video/mp4">
+        </video>
     </div>
 </body>
 </html>
