--- a/sil/index.html
+++ b/sil/index.html
@@ -16,6 +16,7 @@
         <li><a onclick="changeContainer('picturesofsil.html','Sil pics')">Sil pics</a></li>
         <li><a onclick="changeContainer('supermovers.html','Super Movers')">Super Movers</a></li>
         <li><a onclick="changeContainer('silaugh.html','Sil&#8217s sexy laugh')">Sil's sexy laugh</a></li>
+		<li><a onclick="changeContainer('whyDontYouJust.html','Important message')">Important Message</a></li>
     </ul>
     <iframe src="aboutsil.html" id="container" allowTransparency="true" scrolling="no" frameborder="0" >
     </iframe>
