Removed old content and modified folder paths to brand new system

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
-    <title id="titlecontainer">Index</title>
+    <title id="titlecontainer">Home</title>
     <link rel="stylesheet" type="text/css" href="css/default.css"/>
     <link rel="icon" href="img/PCIcon.png"/>
     <meta property="og:type" content="website">
@@ -10,11 +10,8 @@
     <meta property="og:image" content="https://danicus2000000.github.io/img/PCIcon.png">
 </head>
 <body>
-    <ul>
-        <li><a href="https://danicus2000000.github.io/Portfolio">My Portfolio</a></li>
-        <li><a href="https://danicus2000000.github.io/sil">The Sil Fanpage</a></li>
-        <li><a href="https://danicus2000000.github.io/aboutR">Notes</a></li>
-        <li><a href="https://danicus2000000.github.io/aboutRM">Addendum</a></li>
-    </ul>
+    <script>
+        window.location.replace(window.location.href+"/main");
+    </script>
 </body>
 </html>
