reverted to safe commit

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <body>
         <center>
             <h1>404 now thats an error!</h1>
-            <p>Seems like you've lost your way traveler, try navigating to <a href="https://danicus2000000.github.io/">the home page</a>!</p>
+            <p>Seems like you've lost your way traveler, try navigating to <a href="https://danicus2000000.github.io/">the index page</a>!</p>
         </center>
     </body>
 </htnml>
