Removed old files and redirected index to portfolio

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<html>
 <head>
+    <meta http-equiv="refresh" content="0; url=https://danicus2000000.github.io/Portfolio"/>
     <title id="titlecontainer">Index</title>
     <link rel="stylesheet" type="text/css" href="css/default.css"/>
     <link rel="icon" href="img/PCIcon.png"/>
@@ -12,9 +13,6 @@
 <body>
     <ul>
         <li><a href="https://danicus2000000.github.io/Portfolio">My Portfolio</a></li>
-        <li><a href="https://danicus2000000.github.io/sil">The Sil Fanpage</a></li>
-        <li><a href="https://danicus2000000.github.io/aboutR">Notes</a></li>
-        <li><a href="https://danicus2000000.github.io/aboutRM">Addendum</a></li>
     </ul>
 </body>
 </html>
