--- a/Portfolio/projects.html
+++ b/Portfolio/projects.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="../css/default.css"/>
+        <link rel="stylesheet" href="../css/default.css"/>
     </head>
 <body>
     <h3><a href="https://github.com/Danicus2000000/Password-checker" target="_blank" id="underline">Password Checker</a></h3>
