--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="refresh" content="0; url=https://danicus2000000.github.io/Portfolio"/>
     <title id="titlecontainer">Index</title>
-    <link rel="stylesheet" type="text/css" href="css/default.css"/>
+    <link rel="stylesheet" href="css/default.css"/>
     <link rel="icon" href="img/PCIcon.png"/>
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://danicus2000000.github.io">
