--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <head>
     <title id="titlecontainer">About Me</title>
-    <link rel="stylesheet" type="text/css" href="../css/default.css"/>
+    <link rel="stylesheet" href="../css/default.css"/>
     <link rel="icon" href="../img/PCIcon.png"/>
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://danicus2000000.github.io/Portfolio">
