--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <htnml>
     <head>
         <link rel="stylesheet" href="/css/default.css"/>
-        <link rel="icon" href="img/PCIcon.png"/>
+        <link rel="icon" href="/img/PCIcon.png"/>
         <title>404: You're lost!</title>
     </head>
     <body>
