--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<htnml>
+<html>
     <head>
         <link rel="stylesheet" href="/css/default.css"/>
         <link rel="icon" href="/img/PCIcon.png"/>
@@ -6,8 +6,8 @@
     </head>
     <body>
         <center>
-            <h1>404 now thats an error!</h1>
-            <p>Seems like you've lost your way traveler, try navigating to <a href="https://danicus2000000.github.io/">the index page</a>!</p>
+            <h1>404 now that's an error!</h1>
+            <p>Seems like you've lost your way traveller, try navigating to <a href="https://danicus2000000.github.io/">the index page</a>!</p>
         </center>
     </body>
-</htnml>
+</html>
